src/objects/JWS_Plan__c.object
<CustomObject>
    <fields>
        <fullName>AwardsPastPerformance__c</fullName>
        <label>AwardsPastPerformance</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AwardsPlanValue__c</fullName>
        <label>報奨対象計画</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AwardsRatiovalue__c</fullName>
        <label>AwardsRatiovalue</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AwardsSamePeriodValue__c</fullName>
        <label>AwardsSamePeriodValue</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BranchCD__c</fullName>
        <description>外部プログラムからのAPIコール時に使用</description>
        <formula>PlanInputOrganization__r.BranchCD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>支店コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BranchNO__c</fullName>
        <formula>PlanInputOrganization__r.BranchNO__c</formula>
        <label>支店シーケンスナンバー</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <formula>PlanInputOrganization__r.Branch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>支店</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BulkUpload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>一括アップロード</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampaignID__c</fullName>
        <description>外部プログラムからのAPIコール時に使用</description>
        <formula>CASESAFEID(PlanInputOrganization__r.CampaignRequest__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>企画ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiseaseClinicPastPerformance__c</fullName>
        <label>過去実績（病医院）</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiseaseClinicPlannedValue1OneThousandYen__c</fullName>
        <label>▲病医院計画値1(千円)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiseaseClinicPlannedValue2OneThousandYen__c</fullName>
        <label>▲病医院計画値2(千円)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiseaseClinicPlannedValue3OneThousandYen__c</fullName>
        <label>▲病医院計画値3(千円)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiseaseClinicRatioOfPlanByConversion__c</fullName>
        <label>対同月数換算（病医院）</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiseaseClinicSamePeriodConversion__c</fullName>
        <label>同月数換算（病医院）</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HeadquartersCD__c</fullName>
        <formula>PlanInputOrganization__r.HeadquartersCD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>本部コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeadquartersNO__c</fullName>
        <formula>PlanInputOrganization__r.HeadquartersNO__c</formula>
        <label>本部シーケンスナンバー</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headquarters__c</fullName>
        <formula>PlanInputOrganization__r.Headquarters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>本部</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemNO__c</fullName>
        <formula>PlanInputLargeClassification__r.ItemNO__c</formula>
        <label>ItemNO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LargeClassificationCD__c</fullName>
        <description>外部プログラムからのAPIコール時に使用</description>
        <formula>PlanInputLargeClassification__r.LargeClassificationCD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>大分類コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LargeClassificationNO__c</fullName>
        <formula>PlanInputLargeClassification__r.LargeClassificationNO__c</formula>
        <label>大分類NO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LargeClassificationNameAndOrgName__c</fullName>
        <formula>PlanInputLargeClassification__r.LargeClassificationCD__c &amp;
PlanInputOrganization__r.WholesaleCD__c &amp; PlanInputOrganization__r.HeadquartersCD__c &amp; PlanInputOrganization__r.SalesDepartmentCD__c &amp; PlanInputOrganization__r.BranchCD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>大分類名＋組織名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LargeClassification__c</fullName>
        <formula>PlanInputLargeClassification__r.LargeClassification__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>大分類</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleClassificationNO__c</fullName>
        <formula>PlanInputLargeClassification__r.MiddleClassificationNO__c</formula>
        <label>MiddleClassificationNO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthTightenFlag1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>▲月締めフラグ1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MonthTightenFlag2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>▲月締めフラグ2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MonthTightenFlag3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>▲月締めフラグ3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrgLevel__c</fullName>
        <formula>IF(AND(ISBLANK(TEXT(PlanInputOrganization__r.CampaignRequest__r.Relief1__c)),ISBLANK(TEXT(PlanInputOrganization__r.CampaignRequest__r.Relief2__c))),TEXT(PlanInputOrganization__r.CampaignRequest__r.EvaluationOrganization__c)
,IF(ISBLANK(TEXT(PlanInputOrganization__r.CampaignRequest__r.Relief2__c)),TEXT(PlanInputOrganization__r.CampaignRequest__r.Relief1__c),TEXT(PlanInputOrganization__r.CampaignRequest__r.Relief2__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>※計画組織階層</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <formula>PlanInputOrganization__r.Wholesale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>組織</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PastPerformance__c</fullName>
        <label>過去実績</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PharmacyPastPerformance__c</fullName>
        <label>過去実績（調剤薬局）</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PharmacyPlannedValue1OneThousandYen__c</fullName>
        <label>▲調剤薬局計画値1(千円)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PharmacyPlannedValue2OneThousandYen__c</fullName>
        <label>▲調剤薬局計画値2(千円)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PharmacyPlannedValue3OneThousandYen__c</fullName>
        <label>▲調剤薬局計画値3(千円)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PharmacyPlannedValue__c</fullName>
        <label>計画値（調剤薬局）</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PharmacyRatioOfPlanByConversion__c</fullName>
        <label>対同月数換算（調剤薬局）</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PharmacySamePeriodConversion__c</fullName>
        <label>同月数換算（調剤薬局）</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlanInputLargeClassification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>計画入力大分類</label>
        <referenceTo>JWS_PlanInputLargeClassification__c</referenceTo>
        <relationshipLabel>計画</relationshipLabel>
        <relationshipName>PlanInputLargeClassification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlanInputOrganizationCd__c</fullName>
        <formula>PlanInputOrganization__r.WholesaleCD__c &amp; PlanInputOrganization__r.HeadquartersCD__c &amp;  PlanInputOrganization__r.SalesDepartmentCD__c &amp; PlanInputOrganization__r.BranchCD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>※計画入力組織コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanInputOrganization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>計画入力組織</label>
        <referenceTo>JWS_PlanInputOrganization__c</referenceTo>
        <relationshipLabel>計画</relationshipLabel>
        <relationshipName>PlanInputOrganization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlannedValue1OneThousandYen__c</fullName>
        <label>▲計画値1</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlannedValue2OneThousandYen__c</fullName>
        <label>▲計画値2</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlannedValue3OneThousandYen__c</fullName>
        <label>▲計画値3</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RatioOfPlanByConversion__c</fullName>
        <label>対同月数換算</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesDepartmentCD__c</fullName>
        <formula>PlanInputOrganization__r.SalesDepartmentCD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>営業部コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesDepartmentNO__c</fullName>
        <formula>PlanInputOrganization__r.SalesDepartmentNO__c</formula>
        <label>営業部シーケンスナンバー</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesDepartment__c</fullName>
        <formula>PlanInputOrganization__r.SalesDepartment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>営業部</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SamePeriodConversion__c</fullName>
        <label>同月数換算</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <formula>PlanInputLargeClassification__r.CampaignRequest__r.ID_Size18__c &amp; WholesaleNO__c &amp; HeadquartersNO__c &amp; SalesDepartmentNO__c &amp; BranchNO__c &amp; LargeClassificationNO__c</formula>
        <label>Sort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalPeriodPlannedValue__c</fullName>
        <label>期間計計画値</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WholesaleCD__c</fullName>
        <formula>PlanInputOrganization__r.WholesaleCD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>卸コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WholesaleGroupNO__c</fullName>
        <formula>PlanInputOrganization__r.WholesaleGroupNO__c</formula>
        <label>WholesaleGroupNO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WholesaleNO__c</fullName>
        <formula>PlanInputOrganization__r.WholesaleNO__c</formula>
        <label>卸シーケンスナンバー</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesale__c</fullName>
        <formula>PlanInputOrganization__r.Wholesale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>卸</label>
        <type>Text</type>
    </fields>
    <label>JWS_Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>CampaignID__c</columns>
        <columns>PastPerformance__c</columns>
        <columns>SamePeriodConversion__c</columns>
        <columns>PlannedValueOneThousandYen__c</columns>
        <columns>PlanInputOrganization__c</columns>
        <columns>PlanInputLargeClassification__c</columns>
        <columns>RatioOfPlanByConversion__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>lien</fullName>
        <columns>MonthTightenFlag1__c</columns>
        <columns>MonthTightenFlag2__c</columns>
        <columns>MonthTightenFlag3__c</columns>
        <columns>NAME</columns>
        <columns>CampaignID__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MonthTightenFlag1__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>MonthTightenFlag2__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>MonthTightenFlag3__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>lien</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>JWSPL-{0000}</displayFormat>
        <label>計画NO</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JWS_Plan</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>JWS_BulkUploadControl</fullName>
        <active>true</active>
        <description>自動企画の場合、一括アップロード画面で、申請中、改定申請中、中止申請中、確定申請中、中止、確定の企画の予想報奨がアップロードされた場合にエラーとする。</description>
        <errorConditionFormula>AND( 
BulkUpload__c , 
 PlanInputLargeClassification__r.CampaignRequest__r.RecordType.DeveloperName =&quot;$Label.JWS_Const_AutoCampType&quot; ,

OR( 
text(PlanInputLargeClassification__r.CampaignRequest__r.ConfirmedCampaignState__c) =&quot;確定申請中&quot;, 
text(PlanInputLargeClassification__r.CampaignRequest__r.CampaignState__c) =&quot;確定&quot;, 
text(PlanInputLargeClassification__r.CampaignRequest__r.CampaignState__c) =&quot;中止&quot;, 
text(PlanInputLargeClassification__r.CampaignRequest__r.CampaignState__c) =&quot;申請中&quot;, 
text( PlanInputLargeClassification__r.CampaignRequest__r.RevisionCampaignState__c )=&quot;改定申請中&quot;, 
text( PlanInputLargeClassification__r.CampaignRequest__r.DiscontinuingCampaignState__c )=&quot;中止申請中&quot; 
) 
)</errorConditionFormula>
        <errorMessage>対象の企画がアップロード可能状態ではありません。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>JWS_MonthTighteningPlannedValueControl</fullName>
        <active>true</active>
        <description>自動企画の場合、一括アップロード画面で、月締め処理が行われている月に対して計画値が変更されようとした場合に、エラーとする。</description>
        <errorConditionFormula>AND(
BulkUpload__c , 
PlanInputLargeClassification__r.CampaignRequest__r.RecordType.DeveloperName =&quot;$Label.JWS_Const_AutoCampType&quot; , 
 text(PlanInputLargeClassification__r.CampaignRequest__r.JudgmentFrequency__c)=&quot;毎月&quot;,
or(
and( MonthTightenFlag1__c ,
 ISCHANGED( PlannedValue1OneThousandYen__c ) ),
and( MonthTightenFlag2__c ,
 ISCHANGED( PlannedValue2OneThousandYen__c ) ),
and( MonthTightenFlag3__c ,
 ISCHANGED( PlannedValue3OneThousandYen__c ) )

)
)</errorConditionFormula>
        <errorMessage>月締め処理が行われているため計画値を更新できません。</errorMessage>
    </validationRules>
</CustomObject>